cabal-version:      2.2
category:           Trees
build-type:         Simple

name:               bracket-expr
synopsis:           regular expressions
version:            0.1

author:             Callan McGill
license:            BSD-3-Clause
description:

executable bracket
  main-is: Main.hs

  hs-source-dirs:   .

  ghc-options:      -Wall
                    -fexpose-all-unfoldings
                    -fspecialise-aggressively
                    -fllvm

  build-depends:    base      
                  , pretty-tree
                  , Earley
                  , containers
                  , colour
                  , directory
                  , diagrams-lib
                  , diagrams-contrib
                  , diagrams-svg
                  , lens


  default-language: Haskell2010

